Verification controller
