# storage/api-docs/api-docs.json
@@ -122,7 +122,7 @@
             }
         },
         "/v1/auth/validate-token": {
-            "post": {
+            "get": {
                 "tags": [
                     "Authentication"
                 ],
@@ -157,7 +157,12 @@
                     "403": {
                         "description": "Forbidden"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
             }
         }
     },
@@ -170,9 +175,9 @@
                 "scheme": "https",
                 "flows": {
                     "password": {
-                        "authorizationUrl": "http://localhost/oauth/authorize",
-                        "tokenUrl": "http://localhost/oauth/token",
-                        "refreshUrl": "http://localhost/token/refresh",
+                        "authorizationUrl": "http://127.0.0.1:7777/api/oauth/authorize",
+                        "tokenUrl": "http://127.0.0.1:7777/api/oauth/token",
+                        "refreshUrl": "http://127.0.0.1:7777/api/token/refresh",
                         "scopes": []
                     }
                 }
